* Switch to element decorator patterns instead of extending the native dom elements. [FuseJS LH #29] [jddalton]
  Note: Backwards compatibility warning.
    - Reorganized event.js
    - Remove unused functionality from unittest.js
    - Convert some unit tests to use the new element decorators

* Add support for inspecting Fuse's Array, Element, Event, Enumerable, Hash, and String plugin properties. [Prototype LH #787] [jddalton, jedediah]

* Add support for the W3C ElementTraversal interface in traversal.js. [jddalton, Diego Perini]

* Ensure Element#getStyle checks isNull() before other calculations. [jddalton]

* Optimize Element className methods by removing support for edge case whitespace such as newlines and tabs. [jddalton, kangax]

* Changed the Class API for calling a super method in favor of T.J. Crowder's approach. [jddalton, kangax, T.J. Crowder]
  Note: A subclassed method may call it's super by:
    Subclass.callSuper(this, 'subMethod', arg1, arg2, ...); // OR
    Subclass.callSuper(this, arguments, arg1, arg2, ...);   // OR
    subMethod.$super.call(this, arg2, arg2, ...);           // OR
    arguments.callee.$super.call(this, arg2, arg2, ...);

* unit test: Correct Element#getStyle width/height test in IE6. [jddalton]

* Store RegExp patterns created while executing Element#removeClassName in a cache. [jddalton, Garrett Smith, kangax, YUI Team]

* Move `borderWidth`, `marginWidth`, `paddingWidth`, and height equivalents from Element#getStyle to Element#getDimensions. [jddalton]

* Optimize Element traversal methods `ancestors`, `next`, `nextSiblings`, `previous`, `previousSiblings`, `siblings`, and `up`. [jddalton, joneff, kangax]

* Add support for the MSXML2.XMLHTTP ActiveXObject because Microsoft.XMLHTTP is deprecated. [MooTools LH #739] [jddalton, lukasbuenger, Scott Kyle]

* Change Fuse.Version, Fuse.ScriptFragment and Fuse.JSONFilter to camelCase to be consistent with the rest of the codebase. [jddalton]
